5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1594_1800.log
== TEST (2019-03-19 16:13:35) 
-- CODE:
a=int(input("digite o valor de a:"))
t=a*2
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:14:02) 
-- CODE:
a=int(input("digite o valor de a:"))
t=a*2
print(t)
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:21:54) 
-- CODE:
a=int(input("digite o valor de a: "))
b=int(input("digite o valor de b: "))
c=int(input("digite o valor de c: "))
s=((a**2)+(b**2)+(c**2))/(a+b+c)

-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:22:30) 
-- CODE:
a=int(input("digite o valor de a: "))
b=int(input("digite o valor de b: "))
c=int(input("digite o valor de c: "))
s=((a**2)+(b**2)+(c**2))/(a+b+c)
print(s)

-- OUTPUT:
25.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:22:40) 
-- CODE:
a=int(input("digite o valor de a: "))
b=int(input("digite o valor de b: "))
c=int(input("digite o valor de c: "))
s=((a**2)+(b**2)+(c**2))/(a+b+c)
print(s)

-- OUTPUT:
25.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:22:53) 
-- CODE:
a=int(input("digite o valor de a: "))
b=int(input("digite o valor de b: "))
c=int(input("digite o valor de c: "))
s=((a**2)+(b**2)+(c**2))/(a+b+c)
print(s)

-- OUTPUT:
25.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:29:37) 
-- CODE:
a=int(input("digite o valor de a: "))
b=int(input("digite o valor de b: "))
c=int(input("digite o valor de c: "))
s=((a**2)+(b**2)+(c**2))/(a+b+c)
print(round(s,6))


-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:30:27) 
-- CODE:
a=int(input("digite o valor de a: "))
b=int(input("digite o valor de b: "))
c=int(input("digite o valor de c: "))
s=((a**2)+(b**2)+(c**2))/(a+b+c)
print(round(s,6))


-- EXECUTION TIME:
0.174193
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:39:50) 
-- CODE:
a=int(input("digite o valor de a: "))
b=int(input("digite o valor de b: "))
c=int(input("digite o valor de c: "))
s=((a**2)+(b**2)+(c**2))/(a+b+c)
print(round(s,6))


-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 15:56:51) 
-- CODE:
a=int(input("digite o valor de a: "))
b=int(input("digite o valor de b: "))
c=int(input("digite o valor de c: "))
(a+b+c)!=0
s=((a**2)+(b**2)+(c**2))/(a+b+c)
print(round(s,6))


-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 15:57:14) 
-- CODE:
a=int(input("digite o valor de a: "))
b=int(input("digite o valor de b: "))
c=int(input("digite o valor de c: "))
(a+b+c)!=0
s=((a**2)+(b**2)+(c**2))/(a+b+c)
print(round(s,7))


-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 15:59:03) 
-- CODE:
a=int(input("digite o valor de a: "))
b=int(input("digite o valor de b: "))
c=int(input("digite o valor de c: "))
a!+0
b!=0
c!=0
(a+b+c)!=0
s=((a**2)+(b**2)+(c**2))/(a+b+c)
print(round(s,7))


-- ERROR:
File "XXXX", line 4
    a!+0
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 15:59:16) 
-- CODE:
a=int(input("digite o valor de a: "))
b=int(input("digite o valor de b: "))
c=int(input("digite o valor de c: "))
a!=0
b!=0
c!=0
(a+b+c)!=0
s=((a**2)+(b**2)+(c**2))/(a+b+c)
print(round(s,7))


-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 15:59:51) 
-- CODE:
a=int(input("digite o valor de a: "))
b=int(input("digite o valor de b: "))
c=int(input("digite o valor de c: "))
a!=0
b!=0
c!=0
(a+b+c)!=0
s=((a**2)+(b**2)+(c**2))/(a+b+c)
print(round(s,7))


-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:00:37) 
-- CODE:
a=int(input("digite o valor de a: "))
b=int(input("digite o valor de b: "))
c=int(input("digite o valor de c: "))
a!=0
b!=0
c!=0
(a+b+c)!=0
s=((a**2)+(b**2)+(c**2))/(a+b+c)
print(round(s,7))


-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:01:13) 
-- CODE:
a=int(input("digite o valor de a: "))
b=int(input("digite o valor de b: "))
c=int(input("digite o valor de c: "))
a!=0
b!=0
c!=0
(a+b+c)!=0
s=(((a**2)+(b**2)+(c**2))/(a+b+c))
print(round(s,7))


-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:01:30) 
-- CODE:
a=int(input("digite o valor de a: "))
b=int(input("digite o valor de b: "))
c=int(input("digite o valor de c: "))
a!=0
b!=0
c!=0
(a+b+c)!=0
s=(((a**2)+(b**2)+(c**2))/(a+b+c))
print(round(s,7))


-- EXECUTION TIME:
0.14102
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 14:40:01) 
-- CODE:
a=int(input("digite o valor de a: "))
b=int(input("digite o valor de b: "))
c=int(input("digite o valor de c: "))
a!=0
b!=0
c!=0
(a+b+c)!=0
s=(((a**2)+(b**2)+(c**2))/(a+b+c))
print(round(s,7))


-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
